[gd_scene load_steps=8 format=3 uid="uid://dkhtck1ehj6gc"]

[ext_resource type="Script" path="res://scripts/interface builders/ChangeDigimonWindow.gd" id="1_gqunr"]
[ext_resource type="Texture2D" uid="uid://dsr3ckriufony" path="res://assets/interface/UI/ChangeDigimonWindow.png" id="1_yxlvg"]
[ext_resource type="PackedScene" uid="uid://dqw2q55o530pr" path="res://scenes/formatting standards/closeButton.tscn" id="2_bvus2"]
[ext_resource type="Texture2D" uid="uid://qs5bgy3bmjjw" path="res://assets/interface/Icons/InterfaceIcons/closeIcon.png" id="3_ki8d1"]
[ext_resource type="PackedScene" uid="uid://ceq7x1pcl0rt3" path="res://scenes/formatting standards/DigimonCard.tscn" id="4_p0cge"]
[ext_resource type="PackedScene" uid="uid://da3w0sp16uw5m" path="res://scenes/formatting standards/button.tscn" id="5_kc7gx"]
[ext_resource type="PackedScene" uid="uid://cy7ro4867yebk" path="res://scenes/formatting standards/label.tscn" id="7_omdwd"]

[node name="ChangeDigimonWindow" type="Node2D" node_paths=PackedStringArray("card0", "card1", "noCompanionLabel", "partyTitle")]
position = Vector2(135, 240)
script = ExtResource("1_gqunr")
card0 = NodePath("DigimonCard0")
card1 = NodePath("DigimonCard1")
noCompanionLabel = NodePath("NoCompanionLabel")
partyTitle = NodePath("Party")

[node name="Window" type="Sprite2D" parent="."]
position = Vector2(0, -37)
texture = ExtResource("1_yxlvg")

[node name="CloseButton" parent="." instance=ExtResource("2_bvus2")]
offset_left = 83.0
offset_top = -122.0
offset_right = 105.0
offset_bottom = -100.0
icon = ExtResource("3_ki8d1")

[node name="DigimonCard0" parent="." instance=ExtResource("4_p0cge")]
visible = false
position = Vector2(0, -66)

[node name="ChooseDigimonButton" parent="DigimonCard0" instance=ExtResource("5_kc7gx")]
offset_left = -75.0
offset_top = -25.0
offset_right = 75.0
offset_bottom = 25.0

[node name="DigimonCard1" parent="." instance=ExtResource("4_p0cge")]
visible = false
position = Vector2(0, -9)

[node name="ChooseDigimonButton" parent="DigimonCard1" instance=ExtResource("5_kc7gx")]
offset_left = -75.0
offset_top = -25.0
offset_right = 75.0
offset_bottom = 25.0

[node name="NoCompanionLabel" parent="." instance=ExtResource("7_omdwd")]
offset_left = -81.0
offset_top = -98.0
offset_right = 81.0
offset_bottom = 23.0

[node name="Party" parent="." instance=ExtResource("7_omdwd")]
offset_left = -83.0
offset_top = -113.0
offset_right = 83.0
offset_bottom = -100.0
horizontal_alignment = 0

[connection signal="button_down" from="CloseButton" to="." method="closing"]
[connection signal="button_down" from="DigimonCard0/ChooseDigimonButton" to="." method="changeDigmon0"]
[connection signal="button_down" from="DigimonCard1/ChooseDigimonButton" to="." method="changeDigmon1"]
